--- a/css/styles.css
+++ b/css/styles.css
@@ -10877,7 +10877,7 @@ p.lead {
   text-transform: uppercase;
 }
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: #6c757d;
 }
 
 @media (min-width: 992px) {
@@ -10897,6 +10897,7 @@ p.lead {
     display: flex;
     margin: auto auto 0;
     padding: 0.5rem;
+    
   }
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
@@ -10919,7 +10920,9 @@ p.lead {
   }
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
+
   }
+  
 }
 .social-icons .social-icon {
   display: inline-flex;
